--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="delete">Excluir</string>
     <string name="add_item">Adicionar item</string>
     <string name="amount1">Quantidade</string>
-    <string name="cartprice">Seu carrinho custa: R$ %1$s</string>
+    <string name="cartprice">Seu carrinho custa:</string>
     <string name="create">Criar</string>
     <string name="confirm">Confirmar</string>
 </resources>
